[tool.poetry]
name = "packtest_beet"
version = "0.0.0"
description = "Beet plugin for PackTest"
authors = ["CarbonSmasher", "Misode"]
license = "MIT"

homepage = "https://github.com/CarbonSmasher/packtest_beet"
repository = "https://github.com/CarbonSmasher/packtest_beet"
documentation = "https://github.com/CarbonSmasher/packtest_beet"

readme = "README.md"

keywords = ["beet", "minecraft", "packtest"]

packages = [{ include = "packtest_beet" }]

include = ["packtest_beet/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
beet = ">=0.45.3"
mecha = { version = ">=0.86.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^24.3"
isort = "^5.10.1"
python-semantic-release = "^7.22.0"
mudkip = "^0.4.14"
pytest-insta = "^0.1.10"
lectern = ">=0.18.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "tests packtest_beet --doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS"

[tool.black]
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.semantic_release]
branch = "main"
version_variable = ["packtest_beet/__init__.py:__version__"]
version_toml = "pyproject.toml:tool.poetry.version"
major_on_zero = false
build_command = "poetry build && poetry run mudkip build --update-gh-pages --repository https://x-access-token:${GH_TOKEN}@github.com/CarbonSmasher/packtest_beet"

[tool.mudkip]
preset = "furo"

[tool.mudkip.override]
html_title = "packtest_beet"
suppress_warnings = ["myst.header"]

[tool.poetry.plugins.beet]
commands = "packtest_beet.commands"

[tool.poetry.scripts]
packtest_beet = "packtest_beet:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
